--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<!-- fetch('http://example.com/movies.json')
-  .then((response) => response.json())
-  .then((data) => console.log(data)); -->
-(put in js)
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body></body>
+</html>
