--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -6,6 +6,16 @@
     <title>Document</title>
   </head>
   <body>
+<h1> SKINS </h1>
+
     <script src="index.js"></script>
+    <link rel="stylesheet" href="style.css" />
+    <input type="button" value="Rifles" id="Rifle" />
+    <input type="button" value="Sidearms" id="Side" />
+    <input type="button" value="Sniper Rifles" id="Sniper" />
+    <input type="button" value="Heavy Machine Guns" id="Machine" />
+    <input type="button" value="Submachine Guns" id="Sub" />
+    <div id="men"></div>
+<h2 id="display"></h2>
   </body>
 </html>
