--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -10,6 +10,7 @@
 
     <script src="index.js"></script>
     <link rel="stylesheet" href="style.css" />
+    <input type="button" value="All" id="All" />
     <input type="button" value="Rifles" id="Rifle" />
     <input type="button" value="Sidearms" id="Side" />
     <input type="button" value="Sniper Rifles" id="Sniper" />
