--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -10,13 +10,18 @@
 
     <script src="index.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <input type="button" value="All" id="All" />
-    <input type="button" value="Rifles" id="Rifle" />
-    <input type="button" value="Sidearms" id="Side" />
-    <input type="button" value="Sniper Rifles" id="Sniper" />
-    <input type="button" value="Heavy Machine Guns" id="Machine" />
-    <input type="button" value="Submachine Guns" id="Sub" />
-    <div id="men"></div>
-<h2 id="display"></h2>
+    
+   <div id="buttons"> 
+    <input type="button" value="All" id="all" />
+    <input type="button" value="Vegan Options" id="veg" />
+
+    <input type="button" value="Rifles" id="rifle" />
+    <input type="button" value="Sidearms" id="side" />
+    <input type="button" value="Sniper Rifles" id="sniper" />
+    <input type="button" value="Heavy Machine Guns" id="machine" />
+    <input type="button" value="Submachine Guns" id="sub" />
+  </div>
+  <div id="men"></div>
+
   </body>
 </html>
