--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -8,20 +8,19 @@
   <body>
 <h1> SKINS </h1>
 
-    <script src="index.js"></script>
+   
     <link rel="stylesheet" href="style.css" />
     
    <div id="buttons"> 
     <input type="button" value="All" id="all" />
-    <input type="button" value="Vegan Options" id="veg" />
-
     <input type="button" value="Rifles" id="rifle" />
     <input type="button" value="Sidearms" id="side" />
     <input type="button" value="Sniper Rifles" id="sniper" />
     <input type="button" value="Heavy Machine Guns" id="machine" />
     <input type="button" value="Submachine Guns" id="sub" />
+    <input type="button" value="Meele" id="knife" />
   </div>
   <div id="men"></div>
-
+  <script src="index.js"></script>
   </body>
 </html>
