--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -21,6 +21,6 @@
     <input type="button" value="Meele" id="knife" />
   </div>
   <div id="men"></div>
-  <script src="index.js"></script>
+  <script type="module" src="index.js"></script>
   </body>
 </html>
