--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-<h1> SKINS </h1>
+<h1> Weapon Skins </h1>
 
    
     <link rel="stylesheet" href="style.css" />
